Corrected center align error for gameHeading.css

--- a/src/GameHeading.css
+++ b/src/GameHeading.css
@@ -1,4 +1,4 @@
-.container {
+.detail-heading-container {
     width: 70%;
     display: block;
     margin: 0 auto;
